--- a/template.yaml
+++ b/template.yaml
@@ -10,6 +10,8 @@ config:
     screwdriver.cd/dockerEnabled: true
     screwdriver.cd/dockerCpu: LOW
     screwdriver.cd/dockerRam: LOW
+  environment:
+    DOCKER_REPO: "CHANGE ME"
   steps:
     - init: |
         apk add git
