--- a/template.yaml
+++ b/template.yaml
@@ -1,6 +1,6 @@
 name: sd/dind
 version: '1.0.0'
-description: SDv4 template that does nothing
+description: Template for building Docker containers using DIND
 maintainer: jithin1987@gmail.com
 config:
   image: docker:dind
