--- a/template.yaml
+++ b/template.yaml
@@ -15,6 +15,7 @@ config:
     DOCKER_MULTI_PLATFORM_BUILDS_ENABLED: 0
     DOCKER_TARGET_PLATFORMS: linux/amd64,linux/arm64
     DOCKERFILE_PATH: '.'
+    DOCKERFILE_NAME: Dockerfile
   steps:
     - setup: |
         apk add git curl coreutils
@@ -57,10 +58,10 @@ config:
         DOCKER_TAG=`cat VERSION`
 
         if [[ $DOCKER_MULTI_PLATFORM_BUILDS_ENABLED -eq 1 ]]; then
-          docker buildx build --push --platform $DOCKER_TARGET_PLATFORMS -t $DOCKER_REPO:latest $DOCKERFILE_PATH
-          docker buildx build --push --platform $DOCKER_TARGET_PLATFORMS -t $DOCKER_REPO:$DOCKER_TAG $DOCKERFILE_PATH
+          docker buildx build --push --platform $DOCKER_TARGET_PLATFORMS -t $DOCKER_REPO:latest -f $DOCKERFILE_NAME $DOCKERFILE_PATH
+          docker buildx build --push --platform $DOCKER_TARGET_PLATFORMS -t $DOCKER_REPO:$DOCKER_TAG -f $DOCKERFILE_NAME $DOCKERFILE_PATH
         else
-          docker build -t $DOCKER_REPO:latest $DOCKERFILE_PATH
+          docker build -t $DOCKER_REPO:latest -f $DOCKERFILE_NAME $DOCKERFILE_PATH
           docker tag $DOCKER_REPO:latest $DOCKER_REPO:$DOCKER_TAG
           docker push $DOCKER_REPO:latest
           docker push $DOCKER_REPO:$DOCKER_TAG
