--- a/template.yaml
+++ b/template.yaml
@@ -16,6 +16,7 @@ config:
     DOCKER_TARGET_PLATFORMS: linux/amd64,linux/arm64
     DOCKERFILE_PATH: '.'
     DOCKERFILE_NAME: Dockerfile
+    DOCKER_BUILD_EXTRA_FLAGS: '--no-cache'
   steps:
     - setup: |
         apk add git curl coreutils
@@ -58,10 +59,10 @@ config:
         DOCKER_TAG=`cat VERSION`
 
         if [[ $DOCKER_MULTI_PLATFORM_BUILDS_ENABLED -eq 1 ]]; then
-          docker buildx build --push --progress plain --platform $DOCKER_TARGET_PLATFORMS --cache-from $DOCKER_REPO:latest --build-arg BUILDKIT_INLINE_CACHE=1 -t $DOCKER_REPO:latest -f $DOCKERFILE_NAME $DOCKERFILE_PATH
-          docker buildx build --push --progress plain --platform $DOCKER_TARGET_PLATFORMS --cache-from $DOCKER_REPO:latest --build-arg BUILDKIT_INLINE_CACHE=1 -t $DOCKER_REPO:$DOCKER_TAG -f $DOCKERFILE_NAME $DOCKERFILE_PATH
+          docker buildx build --push --progress plain --platform $DOCKER_TARGET_PLATFORMS --cache-from $DOCKER_REPO:latest --build-arg BUILDKIT_INLINE_CACHE=1 $DOCKER_BUILD_EXTRA_FLAGS -t $DOCKER_REPO:latest -f $DOCKERFILE_NAME $DOCKERFILE_PATH
+          docker buildx build --push --progress plain --platform $DOCKER_TARGET_PLATFORMS --cache-from $DOCKER_REPO:latest --build-arg BUILDKIT_INLINE_CACHE=1 $DOCKER_BUILD_EXTRA_FLAGS -t $DOCKER_REPO:$DOCKER_TAG -f $DOCKERFILE_NAME $DOCKERFILE_PATH
         else
-          docker build -t $DOCKER_REPO:latest -f $DOCKERFILE_NAME $DOCKERFILE_PATH
+          docker build $DOCKER_BUILD_EXTRA_FLAGS -t $DOCKER_REPO:latest -f $DOCKERFILE_NAME $DOCKERFILE_PATH
           docker tag $DOCKER_REPO:latest $DOCKER_REPO:$DOCKER_TAG
           docker push $DOCKER_REPO:latest
           docker push $DOCKER_REPO:$DOCKER_TAG
