--- a/template.yaml
+++ b/template.yaml
@@ -60,7 +60,8 @@ config:
 
         if [[ $DOCKER_MULTI_PLATFORM_BUILDS_ENABLED -eq 1 ]]; then
           docker buildx build --push --progress plain --platform $DOCKER_TARGET_PLATFORMS --cache-from $DOCKER_REPO:latest --build-arg BUILDKIT_INLINE_CACHE=1 $DOCKER_BUILD_EXTRA_FLAGS -t $DOCKER_REPO:latest -f $DOCKERFILE_NAME $DOCKERFILE_PATH
-          docker buildx build --push --progress plain --platform $DOCKER_TARGET_PLATFORMS --cache-from $DOCKER_REPO:latest --build-arg BUILDKIT_INLINE_CACHE=1 $DOCKER_BUILD_EXTRA_FLAGS -t $DOCKER_REPO:$DOCKER_TAG -f $DOCKERFILE_NAME $DOCKERFILE_PATH
+          sleep 10
+          docker buildx build --push --progress plain --platform $DOCKER_TARGET_PLATFORMS --cache-from $DOCKER_REPO:latest --build-arg BUILDKIT_INLINE_CACHE=1 -t $DOCKER_REPO:$DOCKER_TAG -f $DOCKERFILE_NAME $DOCKERFILE_PATH
         else
           docker build $DOCKER_BUILD_EXTRA_FLAGS -t $DOCKER_REPO:latest -f $DOCKERFILE_NAME $DOCKERFILE_PATH
           docker tag $DOCKER_REPO:latest $DOCKER_REPO:$DOCKER_TAG
