--- a/template.yaml
+++ b/template.yaml
@@ -17,8 +17,8 @@ config:
     DOCKERFILE_PATH: '.'
     DOCKERFILE_NAME: Dockerfile
     DOCKER_BUILD_EXTRA_FLAGS: '--no-cache'
-    # DOCKER_REGISTRY_USER
-    # DOCKER_REGISTRY_TOKEN
+    DOCKER_REGISTRY_USER
+    DOCKER_REGISTRY_TOKEN
   steps:
     - setup: |
         apk add git curl coreutils
